# quasi

./: .gitignore  AGENTS.md  Cargo.toml  README.md  embed.html  index.html
.claude/agents/: README.md  code-attacker.md  code-defender.md  plan-skeptic.md  render-attacker.md  render-defender.md  research-critic.md
.claude/skills/: README.md  close-plan.md  commit-and-push.md  pre-flight.md
.github/workflows/: ci.yml  pages.yml
data/env/: synthetic_sky.hdr
data/gltf/: cornell_bunny.gltf  cornell_cloud.gltf  cornell_foggy_room.gltf  cornell_fur_bunny.gltf  cornell_glass_bunny.gltf  cornell_glass_sphere.gltf  cornell_many_lights.gltf  cornell_metal_bunny.gltf  (+8 more)
examples/: analyze_bloom_sweep.rs  bench_sky_bake.rs  gen_adaptive_bias.rs  gen_cloud.rs  gen_cornell.rs  gen_denoise_comparison.rs  gen_env.rs  gen_pbr_maps.rs
plans/: 0001-foundation.md  0002-realtime-rasterization.md  0003-triangle-meshes.md  0004-pbr-and-textures.md  0005-participating-media.md  0006-clouds.md  0007-henyey-greenstein.md  0008-density-grids.md  0009-vdb-ingest.md  0010-continuous-integration.md  0011-readme-aesthetic.md  0012-padded-sobol.md  0013-browser-embed.md  0014-environment-map.md  0015-pbr-maps.md  0016-many-lights.md  0017-denoising.md  0018-denoise-tonemap.md  0019-mikktspace.md  0020-light-vs-env.md  0021-denoise-halo-metric.md  0022-sponza-baseline.md  0023-pt-sun-light.md  0024-pt-chess-showcase.md  0025-pt-bistro.md  0026-pt-ktx2.md  0027-pt-mikktspace.md  0028-pt-adaptive.md  0029-pt-bloom.md  0030-pt-sky.md  0031-pt-nfor.md  0032-rt-cluster-cull.md  0033-rt-micropoly.md  0034-rt-virtualized.md  README.md  ROADMAP.md
scripts/: README.md  fetch_bistro.py  fetch_khronos_scene.py  fetch_sponza.py  qvg_writer.py  render_bistro_orbit.sh  test_qvg_writer.py  vdb_to_qvg.cpp  vdb_to_qvg.py
src/: gpu.rs  lib.rs  main.rs  pathtrace.rs  raster.rs  scene.rs  shader.wgsl
tests/: cloud.rs  cornell_gltf.rs  dielectric.rs  env.rs  ggx.rs  grid.rs  medium.rs  phase.rs  shaders.rs  sun_light.rs
(+54 files in other folders)
