[package]
name = "quasi"
version = "0.1.0"
edition = "2021"
description = "Quasi — a global illumination renderer (Rust / wgpu / WebGPU)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = "0.29"
wgpu = "29"
log = "0.4"
cfg-if = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3"
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Node",
    "HtmlElement",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
] }
