[package]
name = "quasi"
version = "0.1.0"
edition = "2021"
description = "Quasi — a global illumination renderer (Rust / wgpu / WebGPU)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = "29"
log = "0.4"
bytemuck = { version = "1", features = ["derive"] }
gltf = { version = "1", features = ["extras"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit = "0.29"
pollster = "0.3"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["png", "hdr"] }
exr = "1"
half = { version = "2", default-features = false }

[dev-dependencies]
naga = { version = "29", features = ["wgsl-in"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_log = "1"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Node",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlSelectElement",
    "CssStyleDeclaration",
    "EventTarget",
    "Event",
    "MouseEvent",
    "WheelEvent",
    "ResizeObserver",
    "IntersectionObserver",
    "IntersectionObserverEntry",
] }
